# AudioVisualizer

./: .gitignore  CMakeLists.txt  README.md
app/include/: application.h  audio_engine.h  visualizer.h
app/src/: application.cpp  audio_engine.cpp  main.cpp  visualizer.cpp
